# gn-webooks

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  bugsnag_avro_schema.json  docker-compose.yml  pyproject.toml  run_webhook_test.sh  test_avro_conversion.py  test_avro_end_to_end.py  test_avro_schema_local.py  test_avro_schema_validation.py  test_bugsnag_end_to_end.py  test_json_schema.py  test_production.py  test_schema_registry.py  test_webhook.py
nginx/: nginx-multi.conf  nginx.conf
producer/: Dockerfile  Dockerfile.json_schema  producer.py  producer_json_schema.py
receiver/: Dockerfile  main.py
samples/: README.md  bugsnag_webhook_sample.json
schemas/: README.md  bugsnag_webhook_schema.json
tools/: monitor_producer.sh  monitor_test.sh  view_dlq.py
