[project]
name = "gn-webooks"
version = "0.1.0"
description = "Production-ready webhook processing pipeline with AVRO serialization and DLQ"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.25.0",
]

[dependency-groups]
# Producer service dependencies
producer = [
    "confluent-kafka==2.3.0",
    "redis==4.3.4",
    "fastavro==1.9.4",
    "requests==2.31.0",
]

# Receiver service dependencies  
receiver = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "redis==4.3.4",
]

# Testing dependencies
test = [
    "requests==2.31.0",
    "faker==20.1.0",
]

# Development dependencies
dev = [
    "requests==2.31.0",
    "faker==20.1.0",
]
